# quantix

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
examples/: basic_usage.py  performance_test.py
src/quantix/: __init__.py  quantix.py
tests/: test_basic.py  test_device_info.py
